// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/message/demo/custom-style.vue correctly 1`] = `
<button class="xy-btn xy-btn-default" type="button">
  <!----><span>Customized style</span>
</button>
`;

exports[`renders ./components/message/demo/duration.vue correctly 1`] = `
<button class="xy-btn xy-btn-default" type="button">
  <!----><span>Customized display duration</span>
</button>
`;

exports[`renders ./components/message/demo/hook.vue correctly 1`] = `
<!--teleport start-->
<!--teleport end-->
<button class="xy-btn xy-btn-primary" type="button">
  <!----><span>Display normal message</span>
</button>
`;

exports[`renders ./components/message/demo/info.vue correctly 1`] = `
<button class="xy-btn xy-btn-primary" type="button">
  <!----><span>Display normal message</span>
</button>
`;

exports[`renders ./components/message/demo/loading.vue correctly 1`] = `
<button class="xy-btn xy-btn-default" type="button">
  <!----><span>Display a loading indicator</span>
</button>
`;

exports[`renders ./components/message/demo/other.vue correctly 1`] = `
<div class="xy-space xy-space-horizontal xy-space-align-center">
  <div class="xy-space-item" style="margin-right: 8px;"><button class="xy-btn xy-btn-default" type="button">
      <!----><span>Success</span>
    </button></div>
  <!---->
  <div class="xy-space-item" style="margin-right: 8px;"><button class="xy-btn xy-btn-default" type="button">
      <!----><span>Error</span>
    </button></div>
  <!---->
  <div class="xy-space-item"><button class="xy-btn xy-btn-default" type="button">
      <!----><span>Warning</span>
    </button></div>
  <!---->
</div>
`;

exports[`renders ./components/message/demo/thenable.vue correctly 1`] = `
<button class="xy-btn xy-btn-default" type="button">
  <!----><span>Display a sequence of message</span>
</button>
`;

exports[`renders ./components/message/demo/update.vue correctly 1`] = `
<button class="xy-btn xy-btn-primary" type="button">
  <!----><span>Open the message box (update by key)</span>
</button>
<br>
<br>
<button class="xy-btn xy-btn-primary" type="button">
  <!----><span>Open the message box (update by reactive)</span>
</button>
`;
